gatekeeper/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    openpolicyagent.org/webhook: ignore
  name: gatekeeper-system
spec:
  finalizers:
    - kubernetes
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
  labels:
    openpolicyagent.org/webhook: ignore
    control-plane: "true"
spec:
  finalizers:
    - kubernetes
